[gd_scene load_steps=6 format=3 uid="uid://dpa6fw8x117ed"]

[ext_resource type="Script" uid="uid://bxd281ovohk1g" path="res://Scripts/battle_controller.gd" id="1_hrtji"]
[ext_resource type="PackedScene" uid="uid://ccmqueenj03hf" path="res://Prefabs/hex_tile.tscn" id="2_55amd"]
[ext_resource type="PackedScene" uid="uid://cn7jljtoo25cf" path="res://Prefabs/battle_unit.tscn" id="3_qohhg"]
[ext_resource type="Script" uid="uid://cc7jvukf2h4xc" path="res://Scripts/battle_input_manager.gd" id="4_g3l8d"]
[ext_resource type="Script" uid="uid://bgnogf41mi852" path="res://Scripts/camera_3d.gd" id="5_bq2oe"]

[node name="GameMap" type="Node3D"]
script = ExtResource("1_hrtji")
LocHexTile = ExtResource("2_55amd")
SceneUnit = ExtResource("3_qohhg")

[node name="InputManager" type="Control" parent="." node_paths=PackedStringArray("actionsPanel", "vboxContainer")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_g3l8d")
actionsPanel = NodePath("ActionsPanel")
vboxContainer = NodePath("ActionsPanel/VBoxContainer")

[node name="SummonButton" type="Button" parent="InputManager"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "summon unit (0/1)"

[node name="ActionsPanel" type="PanelContainer" parent="InputManager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 500.0
offset_top = 300.0
offset_right = 573.0
offset_bottom = 402.0

[node name="VBoxContainer" type="VBoxContainer" parent="InputManager/ActionsPanel"]
layout_mode = 2

[node name="Button" type="Button" parent="InputManager/ActionsPanel/VBoxContainer"]
layout_mode = 2
text = "move"

[node name="Button2" type="Button" parent="InputManager/ActionsPanel/VBoxContainer"]
layout_mode = 2
text = "penis "

[node name="EndTurnButton" type="Button" parent="InputManager"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 151.0
grow_vertical = 0
text = "End Turn"

[node name="StateLabel" type="Label" parent="InputManager"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Input State: PENDING"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.960342, 0.278823, 0, -0.278823, 0.960342, 0, 1.69987, 2.42782)
script = ExtResource("5_bq2oe")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.27733, 0)

[node name="HexTile" parent="." instance=ExtResource("2_55amd")]
visible = false

[node name="BattleUnit" parent="." instance=ExtResource("3_qohhg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.31784922, 0)
visible = false
unitData = null

[connection signal="gui_input" from="InputManager" to="InputManager" method="_on_gui_input"]
[connection signal="pressed" from="InputManager/SummonButton" to="InputManager" method="_on_summon_button_pressed"]
[connection signal="pressed" from="InputManager/EndTurnButton" to="InputManager" method="_on_end_turn_button_pressed"]
